d3heatmap 0.6.0 (2015-06-22)
----------------------------------------

* d3heatmap - gains new parameters:
  * digits - for controling the resolution of the value presented in the hover tooltip 
  * labRow, labCol	- character vectors with row and column labels to use;
  * cexRow, cexCol - to mimic the same values in heatmap.
  * revC - when dealing with a symmatric matrix

* Fix error in coloring code; accept palette integers 
* Remove invert_colors param, it no longer works
* Remove heatmap_options parameter, it isn't needed


d3heatmap 0.5.0 (2015-06-20)
----------------------------------------

* dendToTree - now cleans NA inside the nodePar/edgePar sub items in the list.

* d3heatmap - gains new parameters from stats::heatmap and gplots::heatmap.2 - including the ability to input the dendrogram that will be plotted. (currently it supports branches with colors, line width, and line type)

* Added a basic Vignette

d3heatmap 0.4.0 (2015-06-11)
----------------------------------------

* CRITICAL BUGFIX: The row and column labels were not ordered correctly in
  previous versions of d3heatmap--ouch! Thank you Sang Hoon Yi!

* The vertical order of row data has been flipped, it now matches the output of
  stats::heatmap.

* d3heatmap no longer depends on the leaflet package. It now depends on scales
  version 2.5 or later.